
- Fix for time formatting bug. Thanks to Ian Kallen
  [Simon Pamies]

- Small fixes for WebDavServer (status not handled correctly) and
  propfind (children are returned from a PROPFIND with "Depth: 0")
  [Kjetil Ørbekk]

0.8 (Jul 15th 2008)
---

- First try of an implementation of the LOCK and UNLOCK features.
  Still very incomplete (read: very incomplete) and not working
  in this version.
  [Simon Pamies]

- Some code cleanups to prepare restructuring
  [Simon Pamies]

- Port to minidom because PyXML isn't longer maintained
  [Martin v. Loewis]

- utils.py: Makes use of DOMImplementation class to create a new xml document
  Uses dom namespace features to create elements within DAV: namespace
  [Stephane Bonhomme]

- davcmd.py: Missing an indent in loop on remove and copy operations on trees, the
  effect was that only the last object was removed/copied : always leads
  to a failure when copying collections.
  [Stephane Bonhomme]

- propfind.py: missing a return at the end of the createResponse method (case of a
  propfind without xml body, should act as a allprops).
  [Stephane Bonhomme]

0.7
---

- Added MySQL auth support brought by Vince Spicer
- Added INI file support also  introduced by Vince
- Some minor bugfixes and integration changes.
- Added instance counter to make multiple instances possible
- Extended --help text a bit

0.6
---

- Added bugfixes for buggy Mac OS X Finder implementation
  Finder tries to stat .DS_Store without checking if it exists
- Cleaned up readme and install files
- Moved license to extra file
- Added distutils support
- Refactored module layout
- Refactored class and module names
- Added commandline support
- Added daemonize support
- Added logging facilities
- Added extended arguments

- some more things I can't remember (spamsch)

Changes since 0.5.1
-------------------
Updated to work with latest 4Suite

Changes since 0.5
-----------------

- added constants.py 